# fantoma

./: .env.example  .gitignore  Dockerfile  LICENSE  PROGRESS.md  README.md  analyze_failures.py  docker-compose.fantoma.yml  pyproject.toml  server.py  stress_audit.py  stress_test.py  supervisord.conf  weekly_monitor.py
.github/workflows/: publish.yml
benchmark/: README.md  __init__.py  __main__.py  config.py  evaluator.py  results.py  run_docker.sh  runner.py  sweep.py  tasks.py  worker.py
benchmark/tests/: test_evaluator.py  test_results.py  test_tasks.py  test_worker.py
docs/: COMPETITIVE-ANALYSIS.md  benchmark.md  proxy-vpn-guide.md
docs/superpowers/plans/: 2026-03-25-captcha-sitekey-fix.md  2026-03-27-fantoma-v03-plan.md  2026-03-28-full-code-audit.md  (+10 more)
examples/: data_extraction.py  escalation.py  form_filling.py  local_llm.py  multi_tab.py  simple_search.py  tool_api.py  with_proxy.py
fantoma/: __init__.py  action_parser.py  agent.py  browser_tool.py  cli.py  config.py  executor.py  navigator.py  planner.py  session.py  state_tracker.py
fantoma/browser/: actions.py  autocomplete.py  consent.py  email_verify.py  engine.py  fingerprint.py  form_assist.py  form_login.py  form_memory.py  humanize.py  observer.py  page_state.py  proxy.py  stealth.py  verification.py
fantoma/captcha/: api_solver.py  detector.py  human_solver.py  orchestrator.py  pow_solver.py  sitekey.py  telegram_solver.py
fantoma/dom/: accessibility.py  diff.py  extractor.py  frames.py  selectors.py
fantoma/llm/: client.py  prompts.py  structured.py  vision.py
fantoma/resilience/: checkpoint.py  escalation.py  memory.py  script_cache.py
tests/: chromium_antibot_test.py  conftest.py  test_action_parser.py  test_adaptive_wait.py  test_agent_orchestrator.py  test_browser_tool.py  test_cache_replay.py  test_captcha.py  test_captcha_edge_cases.py  test_container_live.py  test_dedup.py  test_dom_extractor.py  test_dom_modes.py  test_email_verify.py  test_engine_storage.py  test_escalation.py  test_executor_logic.py  test_field_state.py  test_fingerprint.py  test_form_assist.py  test_form_login.py  test_form_memory.py  test_frames.py  test_landmarks.py  test_llm_labeller.py  test_multi_action.py  test_navigator.py  test_observer.py  test_page_state.py  test_paint_order.py  test_patchright.py  test_planner.py  test_popup_handling.py  test_progress.py  test_pruning.py  test_reflection.py  test_resilience.py  test_script_cache.py  test_scroll_hints.py  test_search_tools.py  (+9 more)
tools/: confidence_test.py  live_test.py  single_signup_test.py  x_probe.py
(+10 files in other folders)
